# CppDiplom

./: CMakeLists.txt  indexer.h  main.cpp  root_certificates.h  spider_client.h  spider_data.h  spider_read_config.h
Search_Engine_HTTP/: CMakeLists.txt  config.ini  indexer.cpp  indexer.h  main.cpp  server.h  spider_client.cpp  spider_client.h  spider_read_config.h
